--- a/g05_lab3.qsf
+++ b/g05_lab3.qsf
@@ -53,4 +53,17 @@ set_global_assignment -name VHDL_FILE g05_7_segment_decoder.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_location_assignment PIN_AB12 -to code[0]
+set_location_assignment PIN_AC12 -to code[1]
+set_location_assignment PIN_AF9 -to code[2]
+set_location_assignment PIN_AF10 -to code[3]
+set_location_assignment PIN_AD11 -to RippleBlank_In
+set_location_assignment PIN_AH28 -to segments[6]
+set_location_assignment PIN_AG28 -to segments[5]
+set_location_assignment PIN_AF28 -to segments[4]
+set_location_assignment PIN_AG27 -to segments[3]
+set_location_assignment PIN_AE28 -to segments[2]
+set_location_assignment PIN_AE27 -to segments[1]
+set_location_assignment PIN_AE26 -to segments[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
