--- a/g05_lab3.qsf
+++ b/g05_lab3.qsf
@@ -51,8 +51,6 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
 set_global_assignment -name VHDL_FILE g05_7_segment_decoder.vhd
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
-set_global_assignment -name CDF_FILE output_files/Chain1.cdf
-set_global_assignment -name CDF_FILE output_files/Chain3.cdf
 set_global_assignment -name VHDL_FILE g05_7_segment_decoder_test.vhd
 set_global_assignment -name VHDL_FILE g05_possibility_table.vhd
 set_global_assignment -name SDC_FILE g05_lab3.sdc
@@ -63,8 +61,13 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name ENABLE_SIGNALTAP ON
-set_global_assignment -name USE_SIGNALTAP_FILE g03_possibility_table.stp
-set_global_assignment -name SIGNALTAP_FILE g03_possibility_table.stp
+set_global_assignment -name USE_SIGNALTAP_FILE g05_possibility_table.stp
+set_location_assignment PIN_AE12 -to TC_EN
+set_location_assignment PIN_AF14 -to CLK
+set_location_assignment PIN_AD10 -to TC_RST
+set_location_assignment PIN_AC9 -to TM_EN
+set_location_assignment PIN_AE11 -to TM_IN
+set_global_assignment -name SIGNALTAP_FILE g05_possibility_table.stp
 set_global_assignment -name SLD_NODE_CREATOR_ID 110 -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_ENTITY_NAME sld_signaltap -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_clk -to CLK -section_id auto_signaltap_0
@@ -158,5 +161,5 @@ set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_IN_ENABLE
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ADVANCED_TRIGGER_ENTITY=basic,1," -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_LEVEL_PIPELINE=1" -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ENABLE_ADVANCED_TRIGGER=0" -section_id auto_signaltap_0
+set_global_assignment -name SLD_FILE db/g05_possibility_table_auto_stripped.stp
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name SLD_FILE db/g03_possibility_table_auto_stripped.stp
